# webactor

./: README.md  pyproject.toml
config/: deepseek_actions.yaml
src/page/: action_executor.py  exceptions.py  module_logger.py  page_operator.py
tests/: README.md
tests/integration/: README.md  conftest.py  test_login.py  test_sidebar.py  test_sidebar_sessions.py
