[build-system]
requires = [
    "setuptools>=42"
]
build-backend = "setuptools.build_meta"

[project]
name = "webactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"

dependencies = [
    "playwright>=1.60.0",
    "pyyaml>=6.0.3",
]
[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
dev = [
    "pip>=26.1.1",
    "setuptools>=82.0.1",
]
